--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.55.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "autoprefixer": "^9.8.6"
   },
   "devDependencies": {
     "@types/node": "^18.8.5",
@@ -33,17 +33,19 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/eslint-plugin-tslint": "5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
-    "astroturf": "^1.0.1",
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.25.0",
     "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "react-scripts": "5.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
+    "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4",
     "web-vitals": "^3.0.3"
   },
